Fixed minor layout bug in some phones

--- a/src/layouts/styles.scss
+++ b/src/layouts/styles.scss
@@ -415,7 +415,8 @@ body,
     .next-post,
     .prev-post {
         float: none;
-        width: 23em;
+        width: 100%;
+        max-width: 23em;
         margin: 0 auto;
         margin-bottom: 2em;
     }
